--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
                 <form>
                     <input id="question" type="text" name="question" value="?"> 
                     <button type="button" onclick="getPrediction()" class="btn-primary">Get your result!</button>
-                    <br>
-                    <div id="answer">
-                    <input type="text" name="answer" value="">
-                </div>
+                    <br>   
+                    <input type="text" id="answer">
             </form>
         </div>
         <script src="main.js"></script>
