--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+        
         <link rel = "stylesheet" type = "text/css" href = "styles.css"/>
     </head>
     <body class="text-center">
         <div class="container">
             <h1>Ask a question!</h1>
                 <form>
-                    <input id="question" type="text" name="question" value="?"> 
+                    <input id="question" type="text" name="question" value="?"> <br/>
                     <button type="button" onclick="getPrediction()" class="btn-primary">Get your result!</button>
                     <br>   
                     <input type="text" id="answer">
@@ -30,4 +30,3 @@
         <script src="main.js"></script>
     </body>
 </html>
-<!--edit-->
