--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="container">
             <h1>Ask a question!</h1>
                 <form>
-                    <input id="question" type="text" name="question" value="?"> <br/>
-                    <button type="button" onclick="getPrediction()" class="btn-primary">Get your result!</button>
+                    <input id="question" type="text" name="question" placeholder="Ask your question here"> <br/>
+                    <button type="button" onclick="getPrediction()">Get my prediction!</button>
                     <br>   
                     <input type="text" id="answer">
             </form>
