Update button class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Ask a question!</h1>
                 <form>
                     <input id="question" type="text" name="question" placeholder="Ask your question here"> <br/>
-                    <button type="button" onclick="getPrediction()">Get my prediction!</button>
+                    <button type="button" onclick="getPrediction()" class="button">Get my prediction!</button>
                     <br>   
                     <input type="text" id="answer">
             </form>
