--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <link rel = "stylesheet" type = "text/css" href = "styles.css"/>
     </head>
-    <body class="text-center">
+    <body>
         <div class="container">
             <h1>Ask a question!</h1>
                 <form>
